# Lucent

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  REAMDE.md  Structure.txt  TODO.md  compile_commands.json
.github/workflows/: cmake-multi-platform.yml  lucent_cross_platform_build.yml
CMAKE/: FindASSIMP.cmake
Docs/: Doxyfile
Docs/html/: _application_8h.html  _application_8h_source.html  _base_component_8h_source.html  _camera_8h.html  _camera_8h_source.html  _camera_component_8h_source.html  _component_includes_8h_source.html  _example_game_mode_8h_source.html  _font_8h_source.html  _forward_renderer_8h.html  _forward_renderer_8h_source.html  _game_mode_8h_source.html  _game_object_8h_source.html  _init_text_8h_source.html  _input_8h.html  _input_8h_source.html  _input_codes_8h.html  _input_codes_8h.js  _input_codes_8h_source.html  _lights_8h.html  _lights_8h_source.html  _material_8h.html  _material_8h.js  _material_8h_source.html  _mesh_8h.html  _mesh_8h_source.html  _model_8h.html  _model_8h_source.html  _model_component_8h_source.html  _model_loader_8h.html  _model_loader_8h_source.html  _render_command_8h.html  _render_command_8h_source.html  _renderer3_d_8h.html  _renderer3_d_8h.js  _renderer3_d_8h_source.html  _scene_8h_source.html  _shader_8h.html  _shader_8h_source.html  _shader_loader_8h.html  (+191 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  enums_0.js  enums_1.js  (+48 more)
Docs/latex/: _application_8h.tex  _camera_8h.tex  _forward_renderer_8h.tex  _input_8h.tex  _input_codes_8h.tex  _lights_8h.tex  _material_8h.tex  _mesh_8h.tex  _model_8h.tex  _model_loader_8h.tex  _render_command_8h.tex  _renderer3_d_8h.tex  _shader_8h.tex  _shader_loader_8h.tex  _texture_8h.tex  _time_8h.tex  _vertex_8h.tex  _window_8h.tex  annotated.tex  class_axis_event_codes.tex  classce_1_1core_1_1_application.tex  classce_1_1core_1_1_clock.tex  classce_1_1core_1_1_input.tex  classce_1_1core_1_1_window.tex  classce_1_1game_1_1_base_component.eps  classce_1_1game_1_1_base_component.tex  classce_1_1game_1_1_camera_component.eps  classce_1_1game_1_1_camera_component.tex  classce_1_1game_1_1_example_game_mode.eps  classce_1_1game_1_1_example_game_mode.tex  classce_1_1game_1_1_game_mode.eps  classce_1_1game_1_1_game_mode.tex  classce_1_1game_1_1_game_object.eps  classce_1_1game_1_1_game_object.tex  classce_1_1game_1_1_model_component.eps  classce_1_1game_1_1_model_component.tex  classce_1_1game_1_1_root_object.eps  classce_1_1game_1_1_root_object.tex  classce_1_1game_1_1_scene.tex  classce_1_1game_1_1_transform_component.eps  (+56 more)
include/Core/: Application.h  Input.h  InputCodes.h  Time.h  Window.h
include/Core/UI/: UserInterface.h
include/Core/Utility/: console.h  log.h  stringutility.h
include/Game/: GameObject.h  Scene.h
include/Game/Components/: BaseComponent.h  CameraComponent.h  LightComponents.h  ModelComponent.h  TransformComponent.h
include/Game/GameMode/: ExampleGameMode.h  GameMode.h
include/Game/GameObjects/: CameraObject.h  LightObjects.h  ModelObject.h
include/Graphics/: Lights.h  Texture.h  Transform.h  Vertex.h
include/Graphics/Model/: Material.h  Mesh.h  Model.h  ModelLoader.h
include/Graphics/Renderer/: ForwardRenderer.h  RenderCommand.h  Renderer3D.h
include/Graphics/Shader/: Shader.h  ShaderLoader.h
include/Graphics/Text/: Font.h  Text.h  (+1 more)
script/: format.sh  install_deps.sh  run.sh
src/: CMakeLists.txt  Main.cpp
src/Core/: Application.cpp  Application.h  CMakeLists.txt  GameMode.h  Input.cpp  Input.h  InputCodes.h  Keycodes.h  Time.cpp  Time.h  Window.cpp  Window.h
src/Core/UI/: UserInterface.cpp
src/Core/Utility/: log.h  stringutility.h
src/Game/: CMakeLists.txt  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/Game/Components/: BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  ComponentIncludes.h  LightComponents.cpp  LightComponents.h  ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp  TransformComponent.h
src/Game/GameMode/: CMakeLists.txt  ExampleGameMode.cpp  ExampleGameMode.h  GameMode.cpp  GameMode.h
src/Game/GameObjects/: CMakeLists.txt  CameraObject.cpp  LightObjects.cpp  ModelObject.cpp  ModelObject.h
src/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  ForwardRenderer.cpp  ForwardRenderer.h  LightSetup.cpp  LightSetup.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderCommand.h  Renderer3D.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Transform.cpp  Vertex.h
src/Graphics/Model/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Graphics/Renderer/: ForwardRenderer.cpp  ForwardRenderer.h  RenderCommand.h  Renderer3D.cpp  Renderer3D.h
src/Graphics/Shader/: CMakeLists.txt  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h
src/Graphics/Text/: CMakeLists.txt  Font.cpp  InitText.cpp  Text.cpp  Text.h
src/Resources/Models/Bulb/: Bulb.mtl
src/Resources/Models/ChineseBuilding/: chinese-building.mtl
src/Resources/Models/Grassy/: grassy.mtl
src/Resources/Models/LightBulb/: bulb.mtl
src/Resources/Models/TestGrass/: untitled.mtl
src/Resources/Models/TestTerrain/: TestTerrain.blend  TestTerrain.blend1  TestTerrain.mtl
src/Resources/Models/TestWindow/: test-window.mtl
src/Shaders/: fragment_test.glsl  test_transparent_fragment.glsl  transparent_sd_fragment.glsl  vertex_test.glsl
src/Shaders/Dynamic/: opaque_sd_fragment.glsl  opaque_sd_vertex.glsl  transparent_sd_fragment.glsl  transparent_sd_vertex.glsl
src/Shaders/Dynamic/Test/: opaque_sd_fragment.glsl  transparent_sd_fragment.glsl
